# jira-analog-university-backend

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run.py
backend/config/: settings.py  tortoise_conf.py
backend/core/: urls.py
backend/core/app/: base_router.py  models.py  schemas.py
backend/core/app/api/: project_views.py  user_views.py
backend/core/auth/: jwt.py  permissions.py  routers.py
backend/migrations/models/: 0_20220315160125_init.sql  1_20220322154708_update.sql  2_20220322180612_update.sql  3_20220322182524_update.sql  4_20220322213345_update.sql  5_20220323172909_update.sql
static/js/: password-validation.js
templates/: base.html  index.html  reset-password-success.html  reset-password.html
